feat: add sync service integrations with data service
