# internal/sync/models/models.go
@@ -4,12 +4,51 @@ import (
 	"time"
 )
 
-type DataChange struct {
-	ID        string
-	UserID    string
+type Metadata struct {
+	Key   string
+	Value string
+}
+
+type DataType int
+
+const (
+	LoginPassword DataType = iota
+	Text
+	Binary
+	Card
+)
+
+type Operation int
+
+const (
+	Add Operation = iota
+	Update
+	Delete
+)
+
+type ResolutionStrategy int
+
+const (
+	UseClientVersion ResolutionStrategy = iota
+	UseServerVersion
+	MergeVersions
+)
+
+type Conflict struct {
+	ID         string
+	UserID     string
+	DataID     string
+	ClientData []byte
+	ServerData []byte
+	Resolved   bool
+	CreatedAt  time.Time
+	UpdatedAt  time.Time
+}
+type ClientData struct {
 	DataID    string
-	Type      string
+	Type      DataType
 	Data      []byte
-	Metadata  map[string]string
-	Timestamp time.Time
+	UpdatedAt time.Time
+	Metadata  []Metadata
+	Operation Operation
 }
